--- a/package.json
+++ b/package.json
@@ -10,8 +10,50 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^2.1.0",
+    "@react-native-community/checkbox": "^0.5.17",
+    "@react-native-community/datetimepicker": "^8.2.0",
+    "@react-native-community/masked-view": "^0.1.11",
+    "@react-native-community/netinfo": "^11.4.1",
+    "@react-native-google-signin/google-signin": "^13.1.0",
+    "@react-navigation/bottom-tabs": "^7.0.11",
+    "@react-navigation/native": "^7.0.6",
+    "@react-navigation/native-stack": "^7.1.7",
+    "@reduxjs/toolkit": "^2.3.0",
+    "axios": "^1.7.8",
+    "base-64": "^1.0.0",
+    "d3-scale": "^4.0.2",
+    "jwt-decode": "^4.0.0",
+    "lottie-react-native": "^7.1.0",
     "react": "18.2.0",
-    "react-native": "0.73.6"
+    "react-native": "0.73.6",
+    "react-native-actions-sheet": "^0.9.7",
+    "react-native-biometrics": "^3.0.1",
+    "react-native-collapsible-tab-view": "^8.0.0",
+    "react-native-fast-image": "^8.6.3",
+    "react-native-get-random-values": "^1.11.0",
+    "react-native-gifted-charts": "^1.4.47",
+    "react-native-material-ripple": "^0.9.1",
+    "react-native-modal-datetime-picker": "^18.0.0",
+    "react-native-orientation-locker": "^1.7.0",
+    "react-native-pager-view": "^6.5.1",
+    "react-native-reanimated": "^3.16.3",
+    "react-native-redash": "^18.1.3",
+    "react-native-responsive-fontsize": "^0.5.1",
+    "react-native-responsive-screen": "^1.4.2",
+    "react-native-safe-area-context": "^4.14.0",
+    "react-native-screens": "^4.3.0",
+    "react-native-size-matters": "^0.4.2",
+    "react-native-svg": "^15.9.0",
+    "react-native-svg-transformer": "^1.5.0",
+    "react-native-toast-message": "^2.2.1",
+    "react-native-vector-icons": "^10.2.0",
+    "react-native-webview": "^13.12.4",
+    "react-redux": "^9.1.2",
+    "redux": "^5.0.1",
+    "redux-persist": "^6.0.0",
+    "socket.io-client": "^4.8.1",
+    "uuid": "^11.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -22,6 +64,7 @@
     "@react-native/metro-config": "0.73.5",
     "@react-native/typescript-config": "0.73.1",
     "@types/react": "^18.2.6",
+    "@types/react-native-vector-icons": "^6.4.18",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.6.3",
     "eslint": "^8.19.0",
